--- a/Smart-Event-Management-and-Ticketing-System/appsettings.json
+++ b/Smart-Event-Management-and-Ticketing-System/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SmartEventManagementDB;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=EventManagementDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
